--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
 <h1>I'm a header</h1>
        Hey there, awesome person!
+        <img scr="https://avatars.githubusercontent.com/u/95975816?v=4">
     </body>
 </html>
