--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
     <body>
 <h1>I'm a header</h1>
-        <img scr="https://avatars.githubusercontent.com/u/95975816?v=4">
+        <img scr=
        Hey there, awesome person!
         
     </body>
