--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
     <body>
 <h1>I'm a header</h1>
-        <img scr=
+        <img src="https://octodex.github.com/images/vinyltocat.png">
        Hey there, awesome person!
         
     </body>
